--- a/.github/workflows/demo.yaml
+++ b/.github/workflows/demo.yaml
@@ -12,22 +12,48 @@ jobs:
     name: Test TypeScript code for event ${{ github.event_name }} on ${{ github.ref }}
     strategy:
       matrix:
-        nodeversion: [">=18.x", latest]
+        nodeversion: [latest]
         os: [ubuntu-latest, macos-latest]
 
     runs-on: ${{ matrix.os }}
     steps:
-      - name: Checking out ${{ github.ref }} ${{ github.sha }}
-        uses: actions/checkout@v3
-      - name: Setup Node.js ${{ matrix.nodeversion }} on ${{ matrix.os }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.nodeversion }}
-      - name: Setup pnpm@latest with Node.js ${{ matrix.nodeversion }} on ${{ matrix.os }}
-        uses: pnpm/action-setup@v2
-        with:
-          version: latest
-      - name: Installing dependencies with `pnpm install`
-        run: pnpm install
-      - name: Running Jest tests with Node.js ${{ matrix.nodeversion }} on ${{ matrix.os }}
-        run: pnpm test
+
+name: Checking out ${{ github.ref }} ${{ github.sha }}
+      uses: actions/checkout@v3
+name: Setup Node.js ${{ matrix.nodeversion }} on ${{ matrix.os }}
+    uses: actions/setup-node@v3
+    with:
+      node-version: ${{ matrix.nodeversion }}
+name: Setup pnpm@latest with Node.js ${{ matrix.nodeversion }} on ${{ matrix.os }}
+  uses: pnpm/action-setup@v2
+  with:
+    version: latest
+name: Installing dependencies with pnpm install
+run: pnpm install
+name: Running Jest tests with Node.js ${{ matrix.nodeversion }} on ${{ matrix.os }}
+run: pnpm test
+
+  package:
+    name: Build and publish Docker image
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+
+name: Checking out ${{ github.ref }} ${{ github.sha }}
+      uses: actions/checkout@v3
+name: Set up QEMU
+    uses: docker/setup-qemu-action@v2
+name: Set up Docker Buildx
+  uses: docker/setup-buildx-action@v2
+name: Login to Docker Hub
+uses: docker/login-action@v2
+with:
+  username: ${{ secrets.DOCKERHUB_USERNAME }}
+  password: ${{ secrets.DOCKERHUB_TOKEN }}
+name: Build and push
+uses: docker/build-push-action@v4
+with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/docker:latest
