--- a/.github/workflows/demo.yaml
+++ b/.github/workflows/demo.yaml
@@ -32,29 +32,27 @@ jobs:
       - name: Running Jest tests with Node.js ${{ matrix.nodeversion }} on ${{ matrix.os }}
         run: pnpm test
 
+  # package:
+  #   name: Build and publish Docker image
+  #   needs: test
+  #   runs-on: ubuntu-latest
+  #   steps:
 
-
-  package:
-    name: Build and publish Docker image
-    needs: test
-    runs-on: ubuntu-latest
-    steps:
-      
-      - name: Checking out ${{ github.ref }} ${{ github.sha }}
-         uses: actions/checkout@v3
-      - name: Set up QEMU
-         uses: docker/setup-qemu-action@v2
-      - name: Set up Docker Buildx
-         uses: docker/setup-buildx-action@v2
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build and push
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/docker:latest
+  #     - name: Checking out ${{ github.ref }} ${{ github.sha }}
+  #        uses: actions/checkout@v3
+  #     - name: Set up QEMU
+  #        uses: docker/setup-qemu-action@v2
+  #     - name: Set up Docker Buildx
+  #        uses: docker/setup-buildx-action@v2
+  #     - name: Login to Docker Hub
+  #       uses: docker/login-action@v2
+  #       with:
+  #         username: ${{ secrets.DOCKERHUB_USERNAME }}
+  #         password: ${{ secrets.DOCKERHUB_TOKEN }}
+  #     - name: Build and push
+  #       uses: docker/build-push-action@v4
+  #       with:
+  #         context: .
+  #         file: ./Dockerfile
+  #         push: true
+  #         tags: ${{ secrets.DOCKERHUB_USERNAME }}/docker:latest
